--- a/Shop11A/Views/Home/Index.cshtml
+++ b/Shop11A/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div class="container-fluid d-flex align-items-center justify-content-center">
-			<img src="http://localhost:5041/images/banner.png" alt="banner" class="" />
+			<img src="http://localhost:5041/images/drehi.jpg" alt="banner" class="" />
 		</div>
 
 
